namespace GestionAnomalies.Entities.Enums
{
    public enum RoleUser
    {
        Administrateur = 0,
        Responsable = 1,
        Technicien = 2,
        Utilisateur = 3
    }
}
